--- a/app/templates/roadmap.hbs
+++ b/app/templates/roadmap.hbs
@@ -9,36 +9,90 @@
           </AuLink>
         </li>
         <li class="au-c-list-horizontal__item">
-          <strong>Roadmap</strong>
+          <AuLink @linkRoute="pre-launch" @skin="secondary">
+            Handleiding testfase
+          </AuLink>
+        </li>
+        <li class="au-c-list-horizontal__item">
+          <strong>Onze aanpak</strong>
         </li>
       </ul>
     </AuToolbarGroup>
   </AuToolbar>
+
   <section class="au-o-region-large">
     <div class="au-o-layout au-o-layout--large">
       <AuContent>
-        <AuHeading>Roadmap</AuHeading>
+        <AuHeading>Onze aanpak</AuHeading>
       </AuContent>
       <hr class="au-c-hr">
-      <AuContent>
-        <h2>Onze aanpak</h2>
-        <p>We kiezen voor een kleinschalige aanpak en breiden geleidelijk sectoraal en regionaal uit.</p>
-        <p>We werken nauw samen met:</p>
-        <ul>
-          <li>regionale en sectorale partners</li>
-          <li>eindgebruikers en belangenorganisaties zoals ...</li>
-        </ul>
-      </AuContent>
-      <hr class="au-c-hr">
-      <AuContent>
-        <h2>Tijdspad</h2>
-        <ul>
-          <li><strong>Fase 0</strong> – Screening van de bestaande database van Toegankelijk Vlaanderen <AuPill @skin="success">Afgewerkt</AuPill></li>
-          <li><strong>Fase 1</strong> – Prototype voor musea in samenwerking met de Stad Gent en de Gentse musea <AuPill @skin="success">Afgewerkt</AuPill></li>
-          <li><strong>Fase 2</strong> – Testfase voor musea met partners en eindgebruikers <AuPill @skin="action">Aan de gang</AuPill></li>
-          <li><strong>Fase 3</strong> – Uitbreiding in de culturele sector</li>
-          <li><strong>Fase 4</strong> – Uitbreiding naar nieuwe sectoren</li>
-        </ul>
+      <div class="au-o-grid">
+        <div class="au-o-grid__item au-u-3-5@medium">
+          <AuContent @skin="large">
+            <p class="au-c-intro">We kiezen voor een kleinschalige aanpak en breiden geleidelijk sectoraal en regionaal uit.</p>
+            <p><strong>We werken nauw samen met:</strong></p>
+            <ul class="au-u-margin-top-small">
+              <li>regionale en sectorale partners</li>
+              <li>eindgebruikers en belangenorganisaties</li>
+            </ul>
+          </AuContent>
+          <AuContent class="au-u-margin-top-large">
+            <h2 class="au-c-heading au-c-heading--3">Tijdspad</h2>
+            <ol class="au-c-numbered-list">
+              <li class="au-c-numbered-list__item">
+                <strong>Fase 1</strong> – Onderzoek en ontwikkeling prototype widget <AuPill @skin="success">Afgewerkt</AuPill>
+                <ul>
+                  <li>We ontwikkelen een widget voor musea en historische huizen</li>
+                  <li>We werken samen met de Stad Gent</li>
+                </ul>
+              </li>
+              <li class="au-c-numbered-list__item">
+                <strong>Fase 2</strong> – Testfase widget voor musea en historische huizen <AuPill @skin="success">Afgewerkt</AuPill>
+                <ul>
+                  <li>We verzamelen meer feedback</li>
+                  <li>We betrekken de juiste mensen en organisaties</li>
+                </ul>
+              </li>
+              <li class="au-c-numbered-list__item">
+                <strong>Fase 3</strong> – Widget voor musea en historische huizen naar het brede publiek <AuPill @skin="action">Aan de gang</AuPill>
+                <ul>
+                  <li>We stellen de widget beschikbaar voor musea en historische huizen in heel Vlaanderen</li>
+                  <li>We maken de online toepassing bekend bij het brede publiek</li>
+                </ul>
+              </li>
+              <li class="au-c-numbered-list__item">
+                <strong>Fase 4</strong> – Uitbreiding naar nieuwe sectoren
+                <ul>
+                  <li>We breiden uit naar nieuwe sectoren en andere regio’s</li>
+                </ul>
+              </li>
+              <li class="au-c-numbered-list__item">
+                <strong>Fase 5</strong> – Nieuwe interactieve functies
+                <ul>
+                  <li>We onderzoeken de mogelijkheden waarbij eigenaars van locaties zelf informatie kunnen ingeven</li>
+                  <li>We geven eindgebruikers de mogelijkheid over locaties heen te zoeken en locaties te beoordelen</li>
+                </ul>
+              </li>
+            </ol>
+          </AuContent>
+        </div>
+        <div class="au-o-grid__item au-u-2-5@medium au-u-visible-medium-up">
+          <div class="au-c-image au-c-image--transparent">
+            <img src="/assets/images/roadmap.svg" alt="Illustratie van een smartphone waar meerdere mensen tegelijk blokjes toevoegen aan een applicatie op het scherm">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="au-o-region-large au-u-border-top">
+    <div class="au-o-layout au-o-layout--large">
+      <AuContent @skin="large" class="au-u-content-center">
+        <h2>Jouw mening telt!</h2>
+        <p>De mening van onze eindgebruikers is belangrijk.</p>
+        <p><em>Is de tentoonstelling in het museum dat ik wil bezoeken interessant voor mij? Kan ik met mijn rolstoel gemakkelijk binnen (en naar het toilet) in het restaurant om de hoek? Beschikt het buurtcentrum over een aanbod op maat? Voel ik me in het recreatiedomein van mijn gemeente welkom en omkaderd.</em></p>
+        <p>Welke informatie heb jij nodig om geïnformeerd en zorgeloos op pad te gaan? Laat het ons weten!</p>
+        <p>{Neem contact met ons op om deel te nemen aan onze gebruikerssessies of schrijf je in voor onze nieuwsbrief.}</p>
       </AuContent>
     </div>
   </section>
@@ -69,12 +123,12 @@
             <AuBadge @icon="sitemap" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
             <AuContent>
               <AuHeading @level="2" @skin="4">
-                Beschikbare gebouwen
+                Handleiding testfase
               </AuHeading>
-              <p class="au-u-margin-top-tiny">Er zijn reeds een aantal gebouwen beschikbaar in onze database.</p>
+              <p class="au-u-margin-top-tiny">Deel je mening over onze nieuwe online toepassing van 3 december tot 24 december 2020.</p>
               <p>
-                <LinkTo @route="buildings" class="au-c-button au-c-button--secondary">
-                  Bekijk de gebouwen
+                <LinkTo @route="pre-launch" class="au-c-button au-c-button--secondary">
+                  Bekijk de handleiding
                 </LinkTo>
               </p>
             </AuContent>
