--- a/app/templates/experience/show/tree/edit.hbs
+++ b/app/templates/experience/show/tree/edit.hbs
@@ -34,22 +34,25 @@
     <hr class="au-c-hr">
 
     <form {{on "submit" this.submit}} class="au-c-form">
-      <p>
-        <AuLabel for="score">Score</AuLabel>
-        <RadioButtons @selected={{this.currentScore}} @onSelect={{this.selectScore}} as |RadioButton|>
-          {{#each this.scoreOptions as |option|}}
-            <RadioButton @label={{option.label}} @value={{option.value}} />
-          {{/each}}
-        </RadioButtons>
-      </p>
-      <p>
-        <AuLabel for="comment">Comment</AuLabel>
-        <AuInput @width="block" id="comment" @value={{this.currentComment}} @placeholder="" />
-        <AuLabel for="commentUrlText">Comment link text</AuLabel>
-        <AuInput @width="block" id="commentUrlText" @value={{this.currentCommentLinkText}} @placeholder="" />
-        <AuLabel for="commentUrl">Comment link URL</AuLabel>
-        <AuInput @width="block" id="commentUrl" @value={{this.currentCommentLinkUrl}} @placeholder="" />
-      </p>
+      {{#if @model.treeNode.children}}
+        <p>
+          <AuLabel for="score">Score</AuLabel>
+          <RadioButtons @selected={{this.currentScore}} @onSelect={{this.selectScore}} as |RadioButton|>
+            {{#each this.scoreOptions as |option|}}
+              <RadioButton @label={{option.label}} @value={{option.value}} />
+            {{/each}}
+          </RadioButtons>
+        </p>
+        {{else}}
+        <p>
+          <AuLabel for="comment">Comment</AuLabel>
+          <AuInput @width="block" id="comment" @value={{this.currentComment}} @placeholder="" />
+          <AuLabel for="commentUrlText">Comment link text</AuLabel>
+          <AuInput @width="block" id="commentUrlText" @value={{this.currentCommentLinkText}} @placeholder="" />
+          <AuLabel for="commentUrl">Comment link URL</AuLabel>
+          <AuInput @width="block" id="commentUrl" @value={{this.currentCommentLinkUrl}} @placeholder="" />
+        </p>
+      {{/if}}
       <AuButton type="submit" {{on "click" this.submit}}>Instellen</AuButton>
     </form>
 
