update text on test pages

--- a/app/templates/pre-launch.hbs
+++ b/app/templates/pre-launch.hbs
@@ -25,7 +25,7 @@
         <div class="au-o-grid__item au-u-3-5@medium">
           <AuContent @skin="large">
             <p class="au-c-intro">Bedankt voor je interesse en deelname aan de eerste testfase van Toegankelijk Vlaanderen.</p>
-            <p>Is een museum interessant om te bezoeken?  Zijn de activiteiten toegankelijk voor mij? Is er een aanbod op maat?  Het is niet altijd gemakkelijk om die informatie op een website te vinden. </p>
+            <p><em>Is een museum interessant om te bezoeken?  Zijn de activiteiten toegankelijk voor mij? Is er een aanbod op maat?</em>  Het is niet altijd gemakkelijk om die informatie op een website te vinden. </p>
             <p>Het agentschap Binnenlands Bestuur en Inter willen daar verandering in brengen. Het doel? Informatie aanbieden over de toegankelijkheid in Vlaanderen. Dat willen we even gebruiksvriendelijk doen zoals websites als Booking.com of Tripadvisor. Samen met de Stad Gent gaan we van start met de toegankelijkheid van de Gentse musea. </p>
             <p>Deel je mening over onze nieuwe online toepassing van <strong>3 december tot 24 december 2020</strong>.</p>
           </AuContent>
@@ -56,9 +56,9 @@
           <AuContent>
             <h2 class="au-c-heading au-c-heading--3">Wat mag je van ons verwachten?</h2>
             <ul class="au-u-margin-top-small">
-              <li>We lezen de feedback grondig.</li>
+              <li>We lezen de reacties grondig en behandelen de informatie vertrouwelijk.</li>
               <li>We verwerken wat we kunnen in onze toekomstige applicatie.</li>
-              <li>We delen de resultaten in februari 2021 en nodigen je graag opnieuw uit!.</li>
+              <li>We delen de resultaten in februari 2021. >il je er graag bij zijn? <a href="#!" target="_blank" rel="noopener noreferrer" class="au-c-link">Laat het ons weten</a>!</li>
             </ul>
           </AuContent>
         </div>
@@ -70,6 +70,7 @@
     <div class="au-o-layout au-o-layout--large">
       <AuContent>
         <h2>Instructies</h2>
+        <p>Tijdens deze testfase geef je jouw mening over onze toegankelijkheidswidget. Een widget is een herbruikbaar blok met een specifieke functie op een website. Onze widget toont informatie over toegankelijkheid.</p>
         <p><strong>De testfase bestaat uit twee onderdelen:</strong></p>
         <ul class="au-u-margin-top-small">
           <li>Testen van widgets voor musea</li>
@@ -78,13 +79,17 @@
       </AuContent>
       <hr class="au-c-hr">
       <AuContent>
-        <h3>Hoe ga je van start?</h3>
+        <h3>Ga aan de slag!</h3>
         <div class="au-c-numbered-list">
           <div class="au-c-numbered-list__item">
-            <h4 class="au-c-heading au-c-heading--4">Test de widgets<sup>*</sup> van je favoriete musea!</h4>
-            <p class="au-u-margin-top-small au-u-margin-bottom-small">Onderstaande lijst bevat twaalf locaties:</p>
+            <h4 class="au-c-heading au-c-heading--4">Test de widgets van je favoriete musea!</h4>
+            <ul class="au-u-margin-top-small au-u-margin-bottom">
+              <li>Test de widgets alsof je een bezoek plant aan de musea.</li>
+              <li>Bekijk de webpagina’s van de musea. Zo zie je hoe ze de informatie zullen integreren op hun website.</li>
+              <li> Test zo veel widgets als jij graag wil.</li>
+            </ul>
 
-            <div class="au-o-grid au-o-grid--small au-u-margin-bottom">
+            <div class="au-o-grid au-o-grid--small">
               <div class="au-o-grid__item au-u-1-2@medium">
                 <h5 class="au-c-heading au-c-heading--6">Widgets:</h5>
                 <ul class="au-u-margin-top-small">
@@ -109,21 +114,15 @@
                 </ul>
               </div>
             </div>
-
-            <p>Test alsof je een bezoek plant aan het museum.</p>
-            <ul class="au-u-margin-top-small au-u-margin-bottom">
-              <li>De widgets tonen enkel het informatieblok over de toegankelijkheid van een museum.</li>
-              <li>Bekijk de widget ook op de website van het museum. Zo heb je een idee hoe de musea de informatie zullen integreren in hun websites.</li>
-            </ul>
-
-            <p class="au-c-caption">* Een widget is een herbruikbaar blok met een specifieke functie, bedoeld voor een website. Onze widget toont informatie over toegankelijkheid</p>
           </div>
           <div class="au-c-numbered-list__item">
             <h4 class="au-c-heading au-c-heading--4">Vul de enquête in</h4>
             <ul class="au-u-margin-top-small">
-              <li>Dat hoeft maar één keer, voor alle geteste widgets samen. </li>
+              <li>Dat hoeft maar één keer, voor alle geteste widgets samen.</li>
               <li>Beschrijf jouw unieke ervaring. Je hoeft geen rekening te houden met andere meningen.</li>
             </ul>
+            <p class="au-u-margin-top-small">We waken over jouw privacy. We informeren op anonieme wijze naar jouw eventuele beperking, om de antwoorden beter te begrijpen.</p>
+            <p class="au-u-margin-top-small">Jouw contactgegevens worden nooit gelinkt aan de informatie uit de enquête.</p>
           </div>
         </div>
       </AuContent>
@@ -134,7 +133,7 @@
     <div class="au-o-layout au-o-layout--large">
       <AuContent @skin="large" class="au-u-content-center">
         <h2>Heb je een vraag?</h2>
-        <p>Neem contact met ons op via <a href="mailto:toegankelijk@vlaanderen.be" class="au-c-link">toegankelijk@vlaanderen.be</a>. We antwoorden je binnen de dag.</p>
+        <p>Neem contact met ons op via <a href="mailto:toegankelijk@vlaanderen.be" class="au-c-link">toegankelijk@vlaanderen.be</a>. We beantwoorden je e-mail binnen 24 uur of op de eerste werkdag na het weekend.</p>
       </AuContent>
     </div>
   </section>
