--- a/app/templates/roadmap.hbs
+++ b/app/templates/roadmap.hbs
@@ -32,8 +32,8 @@
             <p class="au-c-intro">We kiezen voor een kleinschalige aanpak en breiden geleidelijk sectoraal en regionaal uit.</p>
             <p><strong>We werken nauw samen met:</strong></p>
             <ul class="au-u-margin-top-small">
-              <li>regionale en sectorale partners</li>
-              <li>eindgebruikers en belangenorganisaties</li>
+              <li>regionale en sectorale partners;</li>
+              <li>eindgebruikers en belangenorganisaties.</li>
             </ul>
           </AuContent>
           <AuContent class="au-u-margin-top-large">
@@ -42,35 +42,35 @@
               <li class="au-c-numbered-list__item">
                 <strong>Fase 1</strong> – Onderzoek en ontwikkeling prototype widget <AuPill @skin="success">Afgewerkt</AuPill>
                 <ul>
-                  <li>We ontwikkelen een widget voor musea en historische huizen</li>
-                  <li>We werken samen met de Stad Gent</li>
+                  <li>We ontwikkelen een widget voor musea en historische huizen.</li>
+                  <li>We werken samen met de Stad Gent.</li>
                 </ul>
               </li>
               <li class="au-c-numbered-list__item">
                 <strong>Fase 2</strong> – Testfase widget voor musea en historische huizen <AuPill @skin="success">Afgewerkt</AuPill>
                 <ul>
-                  <li>We verzamelen meer feedback</li>
-                  <li>We betrekken de juiste mensen en organisaties</li>
+                  <li>We verzamelen meer feedback.</li>
+                  <li>We betrekken de juiste mensen en organisaties.</li>
                 </ul>
               </li>
               <li class="au-c-numbered-list__item">
                 <strong>Fase 3</strong> – Widget voor musea en historische huizen naar het brede publiek <AuPill @skin="action">Aan de gang</AuPill>
                 <ul>
-                  <li>We stellen de widget beschikbaar voor musea en historische huizen in heel Vlaanderen</li>
-                  <li>We maken de online toepassing bekend bij het brede publiek</li>
+                  <li>We stellen de widget beschikbaar voor musea en historische huizen in heel Vlaanderen.</li>
+                  <li>We maken de online toepassing bekend bij het brede publiek.</li>
                 </ul>
               </li>
               <li class="au-c-numbered-list__item">
                 <strong>Fase 4</strong> – Uitbreiding naar nieuwe sectoren
                 <ul>
-                  <li>We breiden uit naar nieuwe sectoren en andere regio’s</li>
+                  <li>We breiden uit naar nieuwe sectoren en andere regio’s.</li>
                 </ul>
               </li>
               <li class="au-c-numbered-list__item">
                 <strong>Fase 5</strong> – Nieuwe interactieve functies
                 <ul>
-                  <li>We onderzoeken de mogelijkheden waarbij eigenaars van locaties zelf informatie kunnen ingeven</li>
-                  <li>We geven eindgebruikers de mogelijkheid over locaties heen te zoeken en locaties te beoordelen</li>
+                  <li>We zorgen ervoor dat eigenaars van locaties zelf informatie kunnen aanpassen.</li>
+                  <li>We geven eindgebruikers de mogelijkheid over locaties heen te zoeken en locaties te beoordelen. </li>
                 </ul>
               </li>
             </ol>
