--- a/app/templates/pre-launch.hbs
+++ b/app/templates/pre-launch.hbs
@@ -58,7 +58,7 @@
             <ul class="au-u-margin-top-small">
               <li>We lezen de reacties grondig en behandelen de informatie vertrouwelijk.</li>
               <li>We verwerken wat we kunnen in onze toekomstige applicatie.</li>
-              <li>We delen de resultaten in februari 2021. >il je er graag bij zijn? <a href="#!" target="_blank" rel="noopener noreferrer" class="au-c-link">Laat het ons weten</a>!</li>
+              <li>We delen de resultaten in februari 2021. Wil je er graag bij zijn? <a href="#!" target="_blank" rel="noopener noreferrer" class="au-c-link">Laat het ons weten</a>!</li>
             </ul>
           </AuContent>
         </div>
