--- a/app/templates/pre-launch.hbs
+++ b/app/templates/pre-launch.hbs
@@ -84,11 +84,10 @@
           <div class="au-c-numbered-list__item">
             <h4 class="au-c-heading au-c-heading--4">Test de widgets van je favoriete musea!</h4>
             <ul class="au-u-margin-top-small au-u-margin-bottom">
-              <li>Test de widgets alsof je een bezoek plant aan de musea.</li>
-              <li>Bekijk de webpagina’s van de musea. Zo zie je hoe ze de informatie zullen integreren op hun website.</li>
-              <li> Test zo veel widgets als jij graag wil.</li>
+              <li>Test de aangeboden informatie alsof je een bezoek plant aan de musea.</li>
+              <li>Bekijk de widgets (eerste kolom) of de weergave van dezelfde informatie op de webpagina’s van de musea (laatste kolom).</li>
+              <li>Test zo veel widgets als jij graag wil.</li>
             </ul>
-
             <div class="au-o-grid au-o-grid--small">
               <div class="au-o-grid__item au-u-1-2@medium">
                 <h5 class="au-c-heading au-c-heading--6">Widgets:</h5>
@@ -108,7 +107,7 @@
                 </ul>
               </div>
               <div class="au-o-grid__item au-u-1-2@medium">
-                <h5 class="au-c-heading au-c-heading--6">Websites:</h5>
+                <h5 class="au-c-heading au-c-heading--6">Webpagina’s:</h5>
                 <ul class="au-u-margin-top-small">
                   <li><a href="https://staging.designmuseumgent.be/bezoek/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">Design Museum website</a></li>
                   <li><a href="https://dewereldvankinaqa.stad.gent/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">De Wereld van Kina website</a></li>
@@ -130,6 +129,7 @@
             <ul class="au-u-margin-top-small">
               <li>Dat hoeft maar één keer, voor alle geteste widgets samen.</li>
               <li>Beschrijf jouw unieke ervaring. Je hoeft geen rekening te houden met andere meningen.</li>
+              <li><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=pjgDDGGV6E641k6Jy9UgoOBUkLHREv5Bvoy-_vIP8B9URUNJU0oxRDBEWENINFZUNjZaOUY4TkhKTy4u" target="_blank" rel="noopener noreferrer" class="au-c-link">Je kan de enquete hier invullen</a>.</li>
             </ul>
             <p class="au-u-margin-top-small">We waken over jouw privacy. We informeren op anonieme wijze naar jouw eventuele beperking, om de antwoorden beter te begrijpen.</p>
             <p class="au-u-margin-top-small">Jouw contactgegevens worden nooit gelinkt aan de informatie uit de enquête.</p>
