--- a/app/templates/pre-launch.hbs
+++ b/app/templates/pre-launch.hbs
@@ -85,7 +85,7 @@
             <h4 class="au-c-heading au-c-heading--4">Test de widgets van je favoriete musea!</h4>
             <ul class="au-u-margin-top-small au-u-margin-bottom">
               <li>Test de aangeboden informatie alsof je een bezoek plant aan de musea.</li>
-              <li>Bekijk de widgets (eerste kolom) of de weergave van dezelfde informatie op de webpagina’s van de musea (laatste kolom).</li>
+              <li>Bekijk de webpagina’s van de musea. Zo zie je hoe ze de informatie zullen integreren op hun website.</li>
               <li>Test zo veel widgets als jij graag wil.</li>
             </ul>
             <div class="au-o-grid au-o-grid--small">
@@ -111,15 +111,15 @@
                 <ul class="au-u-margin-top-small">
                   <li><a href="https://staging.designmuseumgent.be/bezoek/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">Design Museum website</a></li>
                   <li><a href="https://dewereldvankinaqa.stad.gent/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">De Wereld van Kina website</a></li>
-                  <li><a href="https://www.gum.gent/nl/toegankelijkheid-test-widget" target="_blank" rel="noopener noreferrer" class="au-c-link">GUM website</a></li>
+                  {{!-- <li><a href="https://www.gum.gent/nl/toegankelijkheid-test-widget" target="_blank" rel="noopener noreferrer" class="au-c-link">GUM website</a></li> --}}
                   <li><a href="https://historischehuizen.stad.gent/nl/gravensteen/toegankelijkheid/toegankelijkheidswidget" target="_blank" rel="noopener noreferrer" class="au-c-link">Gravensteen website</a></li>
-                  <li><a href="https://huisvanalijn.be/nl/testwidget" target="_blank" rel="noopener noreferrer" class="au-c-link">Huis van Alijn website</a></li>
-                  <li><a href="https://www.industriemuseum.be/nl/testwidget" target="_blank" rel="noopener noreferrer" class="au-c-link">Industriemuseum website</a></li>
+                  {{!-- <li><a href="https://huisvanalijn.be/nl/testwidget" target="_blank" rel="noopener noreferrer" class="au-c-link">Huis van Alijn website</a></li> --}}
+                  {{!-- <li><a href="https://www.industriemuseum.be/nl/testwidget" target="_blank" rel="noopener noreferrer" class="au-c-link">Industriemuseum website</a></li> --}}
                   <li><a href="https://mskgent.wieni.work/nl/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">MSK website</a></li>
-                  <li><a href="https://www.museumdrguislain.be/nl/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">Museum Dr. Guislain website</a></li>
+                  {{!-- <li><a href="https://www.museumdrguislain.be/nl/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">Museum Dr. Guislain website</a></li> --}}
                   <li><a href="https://historischehuizen.stad.gent/nl/sint-pietersabdij/toegankelijkheid/toegankelijkheidswidget" target="_blank" rel="noopener noreferrer" class="au-c-link">Sint-Pietersabdij website</a></li>
-                  <li><a href="https://stamgent.be/nl_be/bezoek-het-stam/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">STAM website</a></li>
-                  <li><a href="https://smak.be/nl/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">S.M.A.K. website</a></li>
+                  {{!-- <li><a href="https://stamgent.be/nl_be/bezoek-het-stam/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">STAM website</a></li> --}}
+                  {{!-- <li><a href="https://smak.be/nl/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">S.M.A.K. website</a></li> --}}
                 </ul>
               </div>
             </div>
