update text pages

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -78,7 +78,7 @@
         <p>De mening van onze eindgebruikers is belangrijk.</p>
         <p><em>Is de tentoonstelling in het museum dat ik wil bezoeken interessant voor mij? Kan ik met mijn rolstoel gemakkelijk binnen (en naar het toilet) in het restaurant om de hoek? Beschikt het buurtcentrum over een aanbod op maat? Voel ik me in het recreatiedomein van mijn gemeente welkom en omkaderd.</em></p>
         <p>Welke informatie heb jij nodig om geïnformeerd en zorgeloos op pad te gaan? Laat het ons weten!</p>
-        <p><a href="https://gelijkekansen.us8.list-manage.com/subscribe?u=2e52b215088b83b2fee354f5c&id=f5c2edfb6d" target="_blank" rel="noopener noreferrer" class="au-c-link">Neem contact met ons op om deel te nemen aan onze gebruikerssessies of schrijf je in voor onze nieuwsbrief.</a></p>
+        <p><AuLink @linkRoute="contact">Neem contact met ons op</AuLink> om deel te nemen aan onze gebruikerssessies of <a href="https://gelijkekansen.us8.list-manage.com/subscribe?u=2e52b215088b83b2fee354f5c&id=f5c2edfb6d" target="_blank" rel="noopener noreferrer" class="au-c-link">schrijf je in voor onze nieuwsbrief.</a></p>
       </AuContent>
     </div>
   </section>
