update website links

--- a/app/templates/pre-launch.hbs
+++ b/app/templates/pre-launch.hbs
@@ -111,14 +111,14 @@
                 <ul class="au-u-margin-top-small">
                   <li><a href="https://staging.designmuseumgent.be/bezoek/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">Design Museum website</a></li>
                   <li><a href="https://dewereldvankinaqa.stad.gent/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">De Wereld van Kina website</a></li>
-                  {{!-- <li><a href="https://www.gum.gent/nl/toegankelijkheid-test-widget" target="_blank" rel="noopener noreferrer" class="au-c-link">GUM website</a></li> --}}
+                  <li><a href="https://www.gum.gent/nl/toegankelijkheid-test-widget" target="_blank" rel="noopener noreferrer" class="au-c-link">GUM website</a></li>
                   <li><a href="https://historischehuizen.stad.gent/nl/gravensteen/toegankelijkheid/toegankelijkheidswidget" target="_blank" rel="noopener noreferrer" class="au-c-link">Gravensteen website</a></li>
-                  {{!-- <li><a href="https://huisvanalijn.be/nl/testwidget" target="_blank" rel="noopener noreferrer" class="au-c-link">Huis van Alijn website</a></li> --}}
-                  {{!-- <li><a href="https://www.industriemuseum.be/nl/testwidget" target="_blank" rel="noopener noreferrer" class="au-c-link">Industriemuseum website</a></li> --}}
+                  <li><a href="https://huisvanalijn.be/nl/testwidget" target="_blank" rel="noopener noreferrer" class="au-c-link">Huis van Alijn website</a></li>
+                  <li><a href="https://www.industriemuseum.be/nl/testwidget" target="_blank" rel="noopener noreferrer" class="au-c-link">Industriemuseum website</a></li>
                   <li><a href="https://mskgent.wieni.work/nl/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">MSK website</a></li>
                   {{!-- <li><a href="https://www.museumdrguislain.be/nl/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">Museum Dr. Guislain website</a></li> --}}
                   <li><a href="https://historischehuizen.stad.gent/nl/sint-pietersabdij/toegankelijkheid/toegankelijkheidswidget" target="_blank" rel="noopener noreferrer" class="au-c-link">Sint-Pietersabdij website</a></li>
-                  {{!-- <li><a href="https://stamgent.be/nl_be/bezoek-het-stam/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">STAM website</a></li> --}}
+                  <li><a href="https://stamgent.be/nl_be/bezoek-het-stam/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">STAM website</a></li>
                   {{!-- <li><a href="https://smak.be/nl/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">S.M.A.K. website</a></li> --}}
                 </ul>
               </div>
