add ghuislain link

--- a/app/templates/pre-launch.hbs
+++ b/app/templates/pre-launch.hbs
@@ -117,7 +117,7 @@
                     <li><a href="https://huisvanalijn.be/nl/testwidget" target="_blank" rel="noopener noreferrer" class="au-c-link">Huis van Alijn website</a></li>
                     <li><a href="https://www.industriemuseum.be/nl/testwidget" target="_blank" rel="noopener noreferrer" class="au-c-link">Industriemuseum website</a></li>
                     <li><a href="https://mskgent.wieni.work/nl/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">MSK website</a></li>
-                    {{!-- <li><a href="https://www.museumdrguislain.be/nl/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">Museum Dr. Guislain website</a></li> --}}
+                    <li><a href="http://demo.museumdrguislain.be/nl/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">Museum Dr. Guislain website</a></li>
                     <li><a href="https://historischehuizen.stad.gent/nl/sint-pietersabdij/toegankelijkheid/toegankelijkheidswidget" target="_blank" rel="noopener noreferrer" class="au-c-link">Sint-Pietersabdij website</a></li>
                     <li><a href="https://stamgent.be/nl_be/bezoek-het-stam/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">STAM website</a></li>
                     {{!-- <li><a href="https://smak.be/nl/toegankelijkheid" target="_blank" rel="noopener noreferrer" class="au-c-link">S.M.A.K. website</a></li> --}}
