Basic support for ACM/IDM
Pair programming with @erikap to land basic ACM/IDM support.

This commit includes shifting to a dumber frontend build system which
matches the new dispatcher and bumping the Ember version we build
from.

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,7 +3,11 @@
        <AuIcon @icon="login" @alignment="left" />Aanmelden
        </LinkTo> --}}
   <span role="menuitem"  class="au-c-button au-c-button--tertiary">
-    <AuIcon @icon="login" @alignment="left" />Aanmelden
+    {{#if this.session.isAuthenticated}}
+      <AcmidmLogout />
+    {{else}}
+      <AcmidmLogin />
+    {{/if}}
   </span>
 </AuMainHeader>
 
