Polymorphic tree rendering under PointOfInterest
The tree is now rendered under PointOfInterest and uses polymorphism.
This change has created some gaps in the UX as the new UI is not
sufficiently consistent.  Although updates will likely need to follow,
the general design will probably be easier with this change.

As a follow-up there is a lot of dead code which should be treated.

--- a/app/components/tree-components/circulation.hbs
+++ b/app/components/tree-components/circulation.hbs
@@ -1,12 +1,12 @@
-{{#each @experience.pointOfInterest.experiences as |experience|}}
+{{#each @subject.experiences as |experience|}}
   <Tree::Node
     @node={{@node}}
-    @experience={{experience}}
+    @subject={{experience}}
     @title={{concat "Circulatie - " experience.title}}
     @disableHandlerComponent={{true}}
     class="au-c-tree__item au-c-tree__item--child">
 
-    <LinkTo class="au-c-tree__edit" @route="experience.show.tree.edit" @models={{array experience.id @node.id}}>
+    <LinkTo class="au-c-tree__edit" @route="poi.show.tree.edit" @models={{array experience.id @node.id}}>
       <AuIcon @icon="pencil" />
       <span class="au-c-tree__edit-label">Aanpassen</span>
     </LinkTo>
