--- a/app/templates/poi/show.hbs
+++ b/app/templates/poi/show.hbs
@@ -1,4 +1,4 @@
-<div class="au-c-main-container__content au-c-main-container__content--scroll"  id="content">
+<div class="au-c-main-container__content au-c-main-container__content--scroll" id="content">
   <AuToolbar @border="bottom" @skin="tint" @size="medium">
     <AuToolbarGroup>
       <ul class="au-c-list-horizontal">
@@ -21,6 +21,12 @@
       <AuHeading @skin="2"><AuPill>Locatie</AuPill> <span  class="au-u-limit-text">{{@model.label}}</span></AuHeading>
     </AuToolbarGroup>
     <AuToolbarGroup class="au-u-h6">
+      <LinkTo class="au-c-button au-c-button--secondary" @route="poi.show.experiences.index" @model={{@model}}>
+        Belevingen
+      </LinkTo>
+      <LinkTo class="au-c-button au-c-button--secondary" @route="poi.show.tree" @model={{@model}}>
+        Kennisboom
+      </LinkTo>
       <LinkTo class="au-c-button au-c-button--secondary" @route="poi.edit" @model={{@model}}>
         <AuIcon @icon="pencil" @alignment="left" />
         Aanpassen
