--- a/app/components/tree-components/experience.hbs
+++ b/app/components/tree-components/experience.hbs
@@ -1,4 +1,4 @@
-{{#each @subject.pointOfInterest.experiences as |experience|}}
+{{#each @subject.experiences as |experience|}}
   <Tree::Node
     @node={{@node}}
     @subject={{experience}}
