--- a/app/components/tree/node.hbs
+++ b/app/components/tree/node.hbs
@@ -41,7 +41,7 @@
           <ul class="au-c-tree__list">
             {{#each this.sortedChildren as |child|}}
               <Tree::Node @node={{child}} @subject={{@subject}} class="au-c-tree__item au-c-tree__item--child">
-                <LinkTo class="au-c-tree__edit" @route="experience.show.tree.edit" @models={{array @subject.id child.id}}>
+                <LinkTo class="au-c-tree__edit" @route="poi.show.tree.edit" @models={{array child.id @subject.id}}>
                   <AuIcon @icon="pencil" />
                   <span class="au-c-tree__edit-label">Aanpassen</span>
                 </LinkTo>
