Working through linting warnings

--- a/app/components/acmidm-login.hbs
+++ b/app/components/acmidm-login.hbs
@@ -1,4 +1,4 @@
-<div {{on "click" this.login}}>
+<div {{on "click" this.login}} role="button">
   <AuIcon @icon="login" @alignment="left" />Aanmelden
 </div>
 {{#if this.isAuthenticating}}
