--- a/app/components/au-contact-form.hbs
+++ b/app/components/au-contact-form.hbs
@@ -3,22 +3,22 @@
     <AuLabel for="select" class="au-u-margin-bottom-small">Waar gaat uw bericht over?</AuLabel>
     <ul class="au-c-list">
       <li class="au-c-list__item">
-        {{wu-radio-button label="Een vraag over de applicatie" value="toegankelijk@vlaanderen.be?subject=Vraag of probleem - Toegankelijk Vlaanderen" onChange=(action (mut mailto)) isBlock=true}}
+        <WuRadioButton @label="Een vraag over de applicatie" @value="toegankelijk@vlaanderen.be?subject=Vraag of probleem - Toegankelijk Vlaanderen" @onChange={{fn (mut this.mailto)}} @isBlock={{true}} />
       </li>
       <li class="au-c-list__item">
-        {{wu-radio-button label="Technische hulp nodig" value="toegankelijk@vlaanderen.be?subject=Technische hulp nodig - Toegankelijk Vlaanderen" onChange=(action (mut mailto)) isBlock=true}}
+        <WuRadioButton @label="Technische hulp nodig" @value="toegankelijk@vlaanderen.be?subject=Technische hulp nodig - Toegankelijk Vlaanderen" @onChange={{fn (mut this.mailto)}} @isBlock={{true}} />
       </li>
       <li class="au-c-list__item">
-        {{wu-radio-button label="Een suggestie of een feature request versturen" value="toegankelijk@vlaanderen.be?subject=Een suggestie of een feature request versturen - Toegankelijk Vlaanderen" onChange=(action (mut mailto)) isBlock=true}}
+        <WuRadioButton @label="Een suggestie of een feature request versturen" @value="toegankelijk@vlaanderen.be?subject=Een suggestie of een feature request versturen - Toegankelijk Vlaanderen" @onChange={{fn (mut this.mailto)}} @isBlock={{true}} />
       </li>
       <li class="au-c-list__item">
-        {{wu-radio-button label="Een bug melden" value="toegankelijk@vlaanderen.be?subject=Vraag of probleem - Toegankelijk Vlaanderen" onChange=(action (mut mailto)) isBlock=true}}
+        <WuRadioButton @label="Een bug melden" @value="toegankelijk@vlaanderen.be?subject=Vraag of probleem - Toegankelijk Vlaanderen" @onChange={{fn (mut this.mailto)}} @isBlock={{true}} />
       </li>
     </ul>
   </div>
 
-  {{#if mailto}}
-    <a href={{concat "mailto:" mailto}} class="au-c-button">Stel bericht op</a>
+  {{#if this.mailto}}
+    <a href={{concat "mailto:" this.mailto}} class="au-c-button">Stel bericht op</a>
   {{else}}
     <AuButton @disabled="true">Stel bericht op</AuButton>
   {{/if}}
