--- a/app/components/criteria/select-choice-criterion.hbs
+++ b/app/components/criteria/select-choice-criterion.hbs
@@ -1,1 +1,1 @@
-{{yield this.args.value.title (eq this.args.value.score "V") this.args.value.score}}
+{{yield @value.title (eq @value.score "V") @value.score}}
