--- a/app/components/edit-components/boolean.hbs
+++ b/app/components/edit-components/boolean.hbs
@@ -48,7 +48,7 @@
 </WithStatechart>
 
 <div>
-  <Criteria::SelectBooleanCriterion @treeNode={{@treeNode}} @value={{this.currentValue}} as |label check score|>
+  <Criteria::SelectBooleanCriterion @treeNode={{@treeNode}} @value={{this.currentValue}} as |label|>
     {{#if label}}
       <Labels::String @value={{label}} />
     {{/if}}
