--- a/app/components/edit-components/kilometers.hbs
+++ b/app/components/edit-components/kilometers.hbs
@@ -41,7 +41,7 @@
 <div>
   <Criteria::SelectCriterion
     @value={{this.kilometerValue}}
-    @treeNode={{this.args.treeNode}}
+    @treeNode={{@treeNode}}
     as |label|>
     <Labels::NumericString
       @label={{label}}
