--- a/app/components/labels/area-string.hbs
+++ b/app/components/labels/area-string.hbs
@@ -1,1 +1,1 @@
-<AuPill class="au-u-margin-top-small">{{filledInTemplate}}</AuPill>
+<AuPill class="au-u-margin-top-small">{{this.filledInTemplate}}</AuPill>
