--- a/app/templates/components/vo-mu-file-dropzone.hbs
+++ b/app/templates/components/vo-mu-file-dropzone.hbs
@@ -1,4 +1,5 @@
-{{#file-dropzone class="au-c-upload" ondrop=(action "onDrop") name=queueName as |dropzone queue|}}
+<FileDropzone class="au-c-upload" ondrop={{fn this.actions.onDrop}} @name=this.queueName as |dropzone queue|>
+  {{!-- {{#file-dropzone class="au-c-upload" ondrop=(action "onDrop") name=queueName as |dropzone queue|}} --}}
   {{#if dropzone.active}}
     <label class="au-c-upload-message">
       <AuIcon @icon="attachment" @alignment="left" />
@@ -29,7 +30,8 @@
       </span>
     </FileUpload>
   {{/if}}
-{{/file-dropzone}}
+  {{!-- {{/file-dropzone}} --}}
+</FileDropzone>
 {{#if hasErrors}}
   <AuAlert @alertIcon="alert-triangle" @alertskin="error" class="au-u-margin-top-tiny">
     <ul>
