--- a/app/components/acmidm-logout.hbs
+++ b/app/components/acmidm-logout.hbs
@@ -1,3 +1,3 @@
-<div {{on "click" this.logout}}>
+<div {{on "click" this.logout}} role="button">
   <AuIcon @icon="login" @alignment="left" />Afmelden
 </div>
